5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1637_2446.log
== TEST (2019-04-09 11:46:19) 
-- CODE:
senha = int(input("senha: "))
a = senha // 100000
a1 = a % 100000
b = a1 // 10000
b1 = a1 % 10000
c = b1 // 1000
c1 = b1 % 1000
d = c1 // 100
d1 = c1 % 100
e = d1 // 10
e1 = d1 % 10
f = e1
print(abcdef)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(abcdef)
NameError: name 'abcdef' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:46:37) 
-- CODE:
senha = int(input("senha: "))
a = senha // 100000
a1 = a % 100000
b = a1 // 10000
b1 = a1 % 10000
c = b1 // 1000
c1 = b1 % 1000
d = c1 // 100
d1 = c1 % 100
e = d1 // 10
e1 = d1 % 10
f = e1
print(a,b,c,d,e,f)
-- OUTPUT:
0 0 0 0 0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:47:34) 
-- CODE:
senha = int(input("senha: "))
a = senha // 100000
a1 = senha % 100000
b = a1 // 10000
b1 = a1 % 10000
c = b1 // 1000
c1 = b1 % 1000
d = c1 // 100
d1 = c1 % 100
e = d1 // 10
e1 = d1 % 10
f = e1
print(a,b,c,d,e,f)
-- OUTPUT:
0 8 7 6 1 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:50:01) 
-- CODE:
senha = int(input("senha: "))
a = senha // 100000
a1 = senha % 100000
b = a1 // 10000
b1 = a1 % 10000
c = b1 // 1000
c1 = b1 % 1000
d = c1 // 100
d1 = c1 % 100
e = d1 // 10
e1 = d1 % 10
f = e1
#print(a,b,c,d,e,f)
if((b + d + f) / (a + c + e) == 0):
	print("sim")
else:
	print("nao")
-- OUTPUT:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:44) 
-- CODE:
senha = int(input("senha: "))
a = senha // 100000
a1 = senha % 100000
b = a1 // 10000
b1 = a1 % 10000
c = b1 // 1000
c1 = b1 % 1000
d = c1 // 100
d1 = c1 % 100
e = d1 // 10
e1 = d1 % 10
f = e1
#print(a,b,c,d,e,f)
if((b + d + f) / (a + c + e) == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.191412
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:50:51) 
-- CODE:
senha = int(input("senha: "))
a = senha // 100000
a1 = senha % 100000
b = a1 // 10000
b1 = a1 % 10000
c = b1 // 1000
c1 = b1 % 1000
d = c1 // 100
d1 = c1 % 100
e = d1 // 10
e1 = d1 % 10
f = e1
#print(a,b,c,d,e,f)
if((b + d + f) / (a + c + e) == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:51:00) 
-- CODE:
senha = int(input("senha: "))
a = senha // 100000
a1 = senha % 100000
b = a1 // 10000
b1 = a1 % 10000
c = b1 // 1000
c1 = b1 % 1000
d = c1 // 100
d1 = c1 % 100
e = d1 // 10
e1 = d1 % 10
f = e1
#print(a,b,c,d,e,f)
if((b + d + f) / (a + c + e) == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.140745
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:51:10) 
-- CODE:
senha = int(input("senha: "))
a = senha // 100000
a1 = senha % 100000
b = a1 // 10000
b1 = a1 % 10000
c = b1 // 1000
c1 = b1 % 1000
d = c1 // 100
d1 = c1 % 100
e = d1 // 10
e1 = d1 % 10
f = e1
#print(a,b,c,d,e,f)
if((b + d + f) / (a + c + e) == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:51:56) 
-- CODE:
senha = int(input("senha: "))
a = senha // 100000
a1 = senha % 100000
b = a1 // 10000
b1 = a1 % 10000
c = b1 // 1000
c1 = b1 % 1000
d = c1 // 100
d1 = c1 % 100
e = d1 // 10
e1 = d1 % 10
f = e1
#print(a,b,c,d,e,f)
#x = b + d + f
if((b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:51:59) 
-- CODE:
senha = int(input("senha: "))
a = senha // 100000
a1 = senha % 100000
b = a1 // 10000
b1 = a1 % 10000
c = b1 // 1000
c1 = b1 % 1000
d = c1 // 100
d1 = c1 % 100
e = d1 // 10
e1 = d1 % 10
f = e1
#print(a,b,c,d,e,f)
#x = b + d + f
if((b + d + f) % (a + c + e) == 0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.268654
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
